@@ -22,6 +22,7 @@ Version 1.5.0
     * X11: Set correct WM_CLASS property to windows
     * fixed: size of preferences dialog on low-res screens
     * fixed: loading plugins with relative paths in portable build
+    * fixed: displaying a lot of RSS feeds in RSS widget in locationbar
 
 Version 1.4.4
     * released 1 September 2013
